; ModuleID = '/home/carl/AnghaBench/tig/src/extr_main.c_main_get_commit_refs.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_main.c_main_get_commit_refs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref = type { i32 }
%struct.line = type { i32 }
%struct.commit = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ref* (%struct.line*, %struct.commit*)* @main_get_commit_refs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ref* @main_get_commit_refs(%struct.line* %0, %struct.commit* %1) #0 {
  %3 = alloca %struct.line*, align 8
  %4 = alloca %struct.commit*, align 8
  %5 = alloca %struct.ref*, align 8
  store %struct.line* %0, %struct.line** %3, align 8
  store %struct.commit* %1, %struct.commit** %4, align 8
  store %struct.ref* null, %struct.ref** %5, align 8
  %6 = load %struct.line*, %struct.line** %3, align 8
  %7 = call i64 @main_check_commit_refs(%struct.line* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load %struct.commit*, %struct.commit** %4, align 8
  %11 = getelementptr inbounds %struct.commit, %struct.commit* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call %struct.ref* @get_ref_list(i32 %12)
  store %struct.ref* %13, %struct.ref** %5, align 8
  %14 = icmp ne %struct.ref* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %9
  %16 = load %struct.line*, %struct.line** %3, align 8
  %17 = call i32 @main_mark_no_commit_refs(%struct.line* %16)
  br label %18

18:                                               ; preds = %15, %9, %2
  %19 = load %struct.ref*, %struct.ref** %5, align 8
  ret %struct.ref* %19
}

declare dso_local i64 @main_check_commit_refs(%struct.line*) #1

declare dso_local %struct.ref* @get_ref_list(i32) #1

declare dso_local i32 @main_mark_no_commit_refs(%struct.line*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
